# TKCopy

./: .gitattributes  .gitignore  README.md  package.json  pyproject.toml  requirements.txt  run.sh  画面匹配方案.md
docs/: 01-environment.md  02-settings.md  03-tts-extraction.md  04-narration-planning.md  05-frame-matching.md  06-tts-generation.md  07-jianying-export.md  08-batch-processing.md  09-logging-and-debugging.md  current-workflow.md
docs/superpowers/plans/: 2026-07-01-drawer-and-dev-server.md
docs/superpowers/specs/: 2026-07-01-drawer-and-dev-server-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/layout/: AppShell.jsx
frontend/src/components/ui/: index.jsx
frontend/src/views/: BatchView.jsx  LogsView.jsx  SettingsView.jsx  SingleTaskView.jsx  StyleLibraryView.jsx
tests/: test_audio_generator.py  test_batch.py  test_frame_matcher.py  test_frontend_contract.py  test_jianying_export.py  test_main_window.py  test_run_script.py  test_script_planner.py  test_srt_rewriter.py  test_tts_extractor.py  test_tts_provider.py  test_video_composer.py  test_vite_config.py  test_vmf_frame_matcher.py  test_workflow.py  test_workflow_structure.py
tkcopy/: __init__.py  batch.py  logging_utils.py  main.py  workflow.py  workflow_context.py  workflow_logging.py  workflow_steps.py
tkcopy/utils/: __init__.py  audio_generator.py  copy_text.py  frame_matcher.py  jianying_export.py  script_planner.py  srt_rewriter.py  tts_extractor.py  tts_provider.py  video_composer.py  vmf_frame_matcher.py
