[project]
name = "tkcopy"
version = "0.1.0"
description = "TKCopy - 复刻工作流工具"
requires-python = ">=3.10,<3.11"
dependencies = [
    "demucs>=4.0",
    "numpy>=1.26",
    "pyannote-audio>=4.0.5",
    "whispercpp>=0.0.13",
    "pycapcut>=0.0.3",
    "pillow>=11.0.0",
    "pywebview>=5.0",
    "scipy>=1.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tkcopy"]
